Fixed formatters and Differ class