@@ -15,23 +15,15 @@ class DifferTest {
 
     @ParameterizedTest
     @CsvSource({
-            "src/test/resources/file1.json, src/test/resources/file2.json, stylish, "
-                    + "src/test/resources/expectedStylish.json",
-            "src/test/resources/file1.yaml, src/test/resources/file2.yaml, plain, "
-                    + "src/test/resources/expectedPlain.txt",
-            "src/test/resources/file1.txt, src/test/resources/file2.txt, json, "
-                    + "src/test/resources/expectedJson.json"
+            "src/test/resources/file1.json, src/test/resources/file2.json, stylish, src/test/resources/expectedStylish.json",
+            "src/test/resources/file1.yaml, src/test/resources/file2.yaml, plain, src/test/resources/expectedPlain.txt",
+            "src/test/resources/file1.txt, src/test/resources/file2.txt, json, src/test/resources/expectedJson.json"
     })
     void testGenerateWithDifferentFormats(
             String file1Path, String file2Path, String format, String expectedPath) throws Exception {
-        // Read expected output
-        String expectedOutput = new String(Files.readAllBytes(Paths.get(expectedPath)));
-
-        // Generate actual output
-        String actualOutput = Differ.generate(file1Path, file2Path, format);
-
-        // Assert that output matches expected output
-        assertThat(actualOutput).isEqualToIgnoringWhitespace(expectedOutput);
+        String expectedOutput = Files.readString(Paths.get(expectedPath)).trim();
+        String actualOutput = Differ.generate(file1Path, file2Path, format).trim();
+        assertThat(actualOutput).isEqualTo(expectedOutput);
     }
 
     @Test
@@ -39,8 +31,6 @@ class DifferTest {
         Exception exception = assertThrows(IOException.class, () -> {
             Differ.generate("src/test/resources/missing.json", "src/test/resources/file2.json", "stylish");
         });
-
-        // Check that the exception message indicates a missing file
         assertThat(exception.getMessage()).contains("No such file");
     }
 }
